Added Git Ignore file

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/studentFragment"
         android:icon="@drawable/ic_student"
-        android:title="Student" />
+        android:title="Learner" />
     <item
         android:id="@+id/entrepreneurFragment"
         android:icon="@drawable/ic_business"
