--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,7 @@
         <item name="colorControlHighlight">@color/blue_500</item>
         <item name="colorControlNormal">@color/blue_400</item>
     </style>
+
     <style name="toolbartext" parent="@style/Base.TextAppearance.AppCompat.Large">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">24sp</item>
@@ -33,4 +34,9 @@
         <item name="android:maxLines">2</item>
         <item name="android:fontFamily" tools:ignore="NewApi">@font/roboto_bold</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
