--- a/app/src/main/res/layout/activity_admin_question_list.xml
+++ b/app/src/main/res/layout/activity_admin_question_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
-    tools:context="com.DIS.careerlogy.Acivity.AdminQuestionList">
+    tools:context="com.DIS.careerlogy.Activity.AdminQuestionList">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
