--- a/app/src/main/res/layout/activity_answerthe_question.xml
+++ b/app/src/main/res/layout/activity_answerthe_question.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.DIS.careerlogy.Acivity.AskQuestionEntrepreneur">
+    tools:context="com.DIS.careerlogy.Activity.AskQuestionEntrepreneur">
 
     <LinearLayout
         android:layout_width="match_parent"
