--- a/app/src/main/res/layout/activity_ask_question_entrepreneur.xml
+++ b/app/src/main/res/layout/activity_ask_question_entrepreneur.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.DIS.careerlogy.Acivity.AskQuestionEntrepreneur">
+    tools:context="com.DIS.careerlogy.Activity.AskQuestionEntrepreneur">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
