--- a/app/src/main/res/layout/activity_question_list.xml
+++ b/app/src/main/res/layout/activity_question_list.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
-    tools:context="com.DIS.careerlogy.Acivity.QuestionList">
+    tools:context="com.DIS.careerlogy.Activity.QuestionList">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -15,6 +15,7 @@
         android:fitsSystemWindows="true"
         android:background="@android:color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
