--- a/app/src/main/res/layout/activity_upload_quaotes.xml
+++ b/app/src/main/res/layout/activity_upload_quaotes.xml
@@ -39,12 +39,12 @@
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Upload Document"
+                    android:text="Add New Quotes"
                     android:textSize="32dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:textAppearance="@style/toolbartext"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -60,7 +60,6 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
 
 
         <androidx.core.widget.NestedScrollView
@@ -96,7 +95,7 @@
                         android:layout_margin="24dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:tint="@color/colorPrimary"
-                        android:src="@drawable/ic_file_attach"/>
+                        android:src="@drawable/ic_add_pic" />
 
 
                 </com.google.android.material.card.MaterialCardView>
@@ -108,7 +107,7 @@
                     android:gravity="center"
                     android:layout_marginTop="8dp"
                     android:textSize="16sp"
-                    android:textColor="@color/grey_40"/>
+                    android:textColor="@color/grey_40" />
 
 
                 <com.google.android.material.button.MaterialButton
@@ -126,15 +125,11 @@
                     app:rippleColor="@color/colorAccent" />
 
 
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
 
     </com.google.android.material.appbar.AppBarLayout>
-
-
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
