--- a/app/src/main/res/layout/update_subcategories.xml
+++ b/app/src/main/res/layout/update_subcategories.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Category"
+                android:singleLine="true"
                 android:padding="12.5dp"
                 android:text="0" />
 
@@ -55,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="URL"
+                android:singleLine="true"
                 android:padding="12.5dp"
                 android:text="0" />
 
