--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
             android:layout_height="450dp"
+            android:padding="8dp"
             android:layout_marginBottom="20dp" />
 
 
