--- a/app/src/main/res/layout/update_subcategories.xml
+++ b/app/src/main/res/layout/update_subcategories.xml
@@ -62,6 +62,44 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <LinearLayout
+            android:id="@+id/vserial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="0dp">
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/roboto_regular"
+                android:text="Serial Number"
+                android:layout_gravity="center"
+                android:textAllCaps="false"
+                android:textSize="16dp"
+                app:cornerRadius="4dp" />
+
+            <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+                android:id="@+id/serrialNo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                app:initialNumber="1"
+                android:fontFamily="@font/roboto_regular"
+                android:text="Cancel"
+                app:backGroundColor="@android:color/transparent"
+                app:textColor="#000"
+                app:textSize="8dp"
+                android:textAllCaps="false"
+                android:textSize="16dp"
+                app:cornerRadius="4dp" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
